crates/nyx-lexer/tests/snapshots/integration_tests__control_flow__block_anon.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: with_anon_block
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Block
- Newline
- Indent
- Let
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
- Dedent
