crates/nyx-lexer/tests/snapshots/integration_tests__control_flow__block_named.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: with_block
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Block
- Ident: my_scope
- Newline
- Indent
- Let
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "10"
    suffix: ~
- Newline
- Let
- Ident: y
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "20"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
- Dedent
